MNMS-385 feat: 주최자 예매자 정보 리스트 확인 기능 추가